k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: synco-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:3.7.0
        ports:
        - containerPort: 9092
          name: plaintext
        - containerPort: 9093
          name: controller
        volumeMounts:
        - name: kafka-data
          mountPath: /tmp/kraft-combined-logs
      volumes:
      - name: kafka-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: synco-namespace
spec:
  type: ClusterIP
  ports:
  - name: plaintext
    port: 9092
    targetPort: 9092
  - name: controller
    port: 9093
    targetPort: 9093
  selector:
    app: kafka
